--- a/Develop/index.html
+++ b/Develop/index.html
@@ -32,22 +32,23 @@
     <section class="hero"></section>
     <section class="content">
         <!-- Added id -->
-        <div id="search-engine-optimization" class="search-engine-optimization">
+        <div id="search-engine-optimization" class="search-engine-optimization content-section">
             <!-- Added "alt" to define images -->
             <img src="./assets/images/search-engine-optimization.jpg" alt="search engine optimization image" class="float-left" />
-            <h2>Search Engine Optimization</h2>
+           <!--Added <br/> to break up h2-->
+            <h2>Search Engine <br /> Optimization</h2>
             <p>
                 The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.
             </p>
         </div>
-        <div id="online-reputation-management" class="online-reputation-management">
+        <div id="online-reputation-management" class="online-reputation-management content-section">
             <img src="./assets/images/online-reputation-management.jpg" alt="Online Reputation Management image" class="float-right" />
-            <h2>Online Reputation Management</h2>
+            <h2>Online Reputation <br /> Management</h2>
             <p>
                 The web is full of opinions, and some of these can be negative. Social media allows anyone with an internet connection to say whatever they want about your business. Online Reputation Management gives you the control over what potential customers see when they search for your business.
             </p>
         </div>
-        <div id="social-media-marketing" class="social-media-marketing">
+        <div id="social-media-marketing" class="social-media-marketing content-section">
             <img src="./assets/images/social-media-marketing.jpg" alt="Social Media Marketing image" class="float-left" />
             <h2>Social Media Marketing</h2>
             <p>
@@ -56,21 +57,21 @@
         </div>
     </section>
     <section class="benefits">
-        <div class="benefit-lead">
+        <div class="benefit-lead benefit-section">
             <h3>Lead Generation</h3>
             <img src="./assets/images/lead-generation.png" alt="" />
             <p>
                 Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.
             </p>
         </div>
-        <div class="benefit-brand">
+        <div class="benefit-brand benefit-section">
             <h3>Brand Awareness</h3>
             <img src="./assets/images/brand-awareness.png" alt="" />
             <p>
                 Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.
             </p>
         </div>
-        <div class="benefit-cost">
+        <div class="benefit-cost benefit-section">
             <h3>Cost Management</h3>
             <img src="./assets/images/cost-management.png" alt=""></img>
             <p>
